--- a/order-service/src/main/resources/bootstrap.yml
+++ b/order-service/src/main/resources/bootstrap.yml
@@ -2,9 +2,13 @@ spring:
   cloud:
     config:
       uri: http://localhost:8888
-  datasource:
-    username: root
-    password: strongpassword
+    vault:
+      scheme: http
+      host: localhost
+      port: 8200
+      authentication: TOKEN
+      application-name: order-service
+      token: s.2Ub8kCYagNZ0QLf1PCniZJ1M
   application:
     name: order-service
 
